test/should_fail/enum_model_007.gm
enum ee {
	a = 42,
	b = a << a
}

node class AA {
	a: ee;
}

